# Pyper

./: .gitignore  LICENSE  README.md  pyper.ipynb  pyproject.toml
VNCP/: VPcmdDefs.h  VPif.cpp  VPif.h  ViperInterface.c  ViperInterface.h
pyper/: viper_classes.py
pyper/io/: decoding_utils.py  io_utils.py  viper_crc16.py
pyper/viper_interface/: config.json  viper_classes.py
src/pyper/: viper_classes.py
src/pyper/io/: viper_crc16.py
viper_interface/: polhemus_viper.py
